k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: notes-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
      annotations:
        ad.datadoghq.com/backend.logs: '[{"source": "python", "service": "notes-backend"}]' # adding log annotations allow auto discovery to parse your logs and correlate with the proper service
    spec:
      containers:
        - name: backend
          image: asia-southeast1-docker.pkg.dev/mcse-sandbox/jake-reg/notes-backend-amd:v0.6
          ports:
            - containerPort: 5000
