k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: notes-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: asia-southeast1-docker.pkg.dev/mcse-sandbox/jake-reg/notes-frontend-amd:v0.9
        ports:
        - containerPort: 3000
