k8s/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-proxy
  namespace: notes-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-proxy
  template:
    metadata:
      labels:
        app: nginx-proxy
    spec:
      containers:
      - name: nginx
        image: asia-southeast1-docker.pkg.dev/mcse-sandbox/jake-reg/nginx-proxy-amd:v0.8
        ports:
        - containerPort: 80
